<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp_10"
    android:paddingLeft="@dimen/dp_10"
    android:paddingRight="@dimen/dp_10"
    >

    <View
        android:id="@+id/boundry1"
        style="@style/boundary_gray"
        android:layout_below="@+id/title"
        android:layout_marginBottom="@dimen/dp_10"
        />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_below="@+id/boundry1"
        android:layout_marginRight="@dimen/dp_10"
        />


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boundry1"
        android:layout_toRightOf="@+id/picture"
        android:text="@string/greensName"
        android:textColor="@color/gray_33"
        android:textSize="@dimen/text_xxxm"/>


    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_toRightOf="@+id/picture"
        android:text="@string/price"
        android:textColor="@color/clr_red"
        android:textSize="@dimen/text_xxm"/>

    <TextView
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_toRightOf="@+id/picture"
        android:text="@string/date"
        android:textColor="@color/gray_66"
        android:textSize="@dimen/text_xxm"/>


    <View
        android:id="@+id/boundry2"
        style="@style/boundary_gray"
        android:layout_below="@+id/picture"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"/>


    <TextView
        android:id="@+id/payStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/boundry2"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@color/translucent"
        android:gravity="center"
        android:paddingBottom="@dimen/dp_5"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:paddingTop="@dimen/dp_5"
        android:text="@string/payStatus"
        android:textColor="@color/red_fd5a5a"
        android:textSize="@dimen/text_xxm"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:drawablePadding="@dimen/dp_10"
        android:drawableRight="@drawable/material_arrwos_greay_right"
        android:padding="@dimen/dp_10"
        android:text="@string/cateringName"
        android:textColor="@color/gray_66"
        android:textSize="@dimen/text_xxxm"/>


</RelativeLayout>