<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp_10"
    android:paddingLeft="@dimen/dp_10"
    android:paddingRight="@dimen/dp_10"
    android:paddingTop="@dimen/dp_10">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/picture"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:layout_marginRight="@dimen/dp_10"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/boundry1"
            android:layout_toRightOf="@+id/picture"
            android:text="@string/greensName"
            android:textColor="@color/gray_33"
            android:textSize="@dimen/text_h" />


        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_15"
            android:text="@string/price"
            android:textColor="@color/clr_red"
            android:textSize="@dimen/text_xxxm" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_toRightOf="@+id/picture"
            android:lineSpacingExtra="@dimen/dp_5"
            android:text="@string/date"
            android:textColor="@color/gray_66"
            android:textSize="@dimen/text_xxxm" />

    </RelativeLayout>

    <View
        android:id="@+id/boundry2"
        style="@style/boundary_gray"
        android:layout_below="@+id/rl"
        android:layout_marginBottom="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_5" />


    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/boundry2"
        android:background="@drawable/bg_select_false"
        android:gravity="center"
        android:paddingBottom="@dimen/dp_5"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:paddingTop="@dimen/dp_5"
        android:text="@string/subscribe"
        android:textColor="@color/red_fd5a5a"
        android:textSize="@dimen/text_xxxm" />


</RelativeLayout>